--- a/app/src/main/res/layout/item_listview_finished.xml
+++ b/app/src/main/res/layout/item_listview_finished.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginBottom="5dp">
@@ -33,7 +33,7 @@
             </LinearLayout>
             <TextView
                 android:id="@+id/TextViewWork"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Rapihin dan lengkapin data Working Periods buat semua karyawan di Altrovis Master"
                 android:textSize="15dp"
