--- a/app/src/main/res/layout/item_listview_unfinished.xml
+++ b/app/src/main/res/layout/item_listview_unfinished.xml
@@ -14,7 +14,7 @@
             android:src="@drawable/ic_menu_camera"
             android:layout_marginRight="10dp"/>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <LinearLayout
@@ -46,7 +46,7 @@
             </LinearLayout>
             <TextView
                 android:id="@+id/TextViewWork"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Rapihin dan lengkapin data Working Periods buat semua karyawan di Altrovis Master"
                 android:textSize="15dp"
