--- a/app/src/main/res/layout/item_listview_unfinished.xml
+++ b/app/src/main/res/layout/item_listview_unfinished.xml
@@ -9,9 +9,14 @@
         android:padding="10dp">
         <ImageView
             android:id="@+id/ImageViewUser"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_menu_camera"
+            android:layout_marginRight="10dp"/>
+        <View
+            android:layout_width="0.3dp"
+            android:layout_height="fill_parent"
+            android:background="#c2c0c0"
             android:layout_marginRight="10dp"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,18 +72,13 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="5dp"
                         android:textColor="#444444"/>
-                    <!--<ImageView-->
-                        <!--android:id="@+id/ImageViewAssigned"-->
-                        <!--android:layout_width="25dp"-->
-                        <!--android:layout_height="25dp"-->
-                        <!--android:src="@drawable/ic_menu_camera"-->
-                        <!--android:layout_marginRight="5dp"/>-->
                     <TextView
                         android:id="@+id/TextViewAssigned"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Pevita"
                         android:textSize="13dp"
+                        android:textStyle="bold"
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="10dp"/>
                     <TextView
