--- a/app/src/main/res/layout/nav_header_activity_main.xml
+++ b/app/src/main/res/layout/nav_header_activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:clickable="true"
         android:layout_gravity="center"/>
 
     <TextView
