--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,15 +5,15 @@
         <menu>
             <item
                 android:id="@+id/nav_to_me_unfinished"
-                android:icon="@drawable/ic_menu_slideshow"
+                android:icon="@drawable/icon_to_me"
                 android:title="To Me" />
             <item
                 android:id="@+id/nav_by_me_unfinished"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/icon_by_me"
                 android:title="By Me" />
             <item
                 android:id="@+id/nav_all_unfinished"
-                android:icon="@drawable/ic_menu_gallery"
+                android:icon="@drawable/icon_all"
                 android:title="All" />
         </menu>
     </item>
@@ -22,15 +22,15 @@
         <menu>
             <item
                 android:id="@+id/nav_to_me_finished"
-                android:icon="@drawable/ic_menu_share"
+                android:icon="@drawable/icon_to_me"
                 android:title="To Me" />
             <item
                 android:id="@+id/nav_by_me_finished"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/icon_by_me"
                 android:title="By Me" />
             <item
                 android:id="@+id/nav_all_finished"
-                android:icon="@drawable/ic_menu_gallery"
+                android:icon="@drawable/icon_all"
                 android:title="All" />
         </menu>
     </item>
