--- a/app/src/main/res/layout/item_listview_finished.xml
+++ b/app/src/main/res/layout/item_listview_finished.xml
@@ -35,6 +35,17 @@
                     android:layout_marginRight="5dp"
                     android:textSize="16dp"
                     android:textStyle="bold"/>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:id="@+id/ImageViewKeterangan"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_gravity="right"/>
+                </RelativeLayout>
             </LinearLayout>
             <TextView
                 android:id="@+id/TextViewWork"
@@ -106,14 +117,6 @@
                         android:textSize="13dp"
                         android:layout_gravity="center_vertical"/>
                 </LinearLayout>
-
-                <!--<ImageView-->
-                <!--android:id="@+id/ImageViewKeterangan"-->
-                <!--android:layout_width="25dp"-->
-                <!--android:layout_height="25dp"-->
-                <!--android:src="@drawable/ic_menu_camera"-->
-                <!--android:layout_alignParentRight="true"-->
-                <!--android:layout_marginRight="5dp"/>-->
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
