--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -39,7 +39,7 @@
         <menu>
             <item
                 android:id="@+id/nav_sign_out"
-                android:icon="@drawable/ic_menu_camera"
+                android:icon="@drawable/ic_logout"
                 android:title="Sign Out" />
         </menu>
     </item>
