--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#ED0739</item>
         <item name="colorPrimaryDark">#D40633</item>
-        <item name="colorAccent">#333333</item>
+        <item name="colorAccent">#D40633</item>
         <item name="android:textColor">#111111</item>
     </style>
 
