--- a/app/src/main/res/layout/dialog_add_workitem.xml
+++ b/app/src/main/res/layout/dialog_add_workitem.xml
@@ -36,5 +36,16 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"/>
 
+	<TextView
+		android:text="Deadline"
+		android:textStyle="bold"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+
+	<EditText
+		android:id="@+id/EditTextDeadline"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:singleLine="true"/>
 
 </LinearLayout>
