--- a/app/src/main/res/layout/item_listview_unfinished.xml
+++ b/app/src/main/res/layout/item_listview_unfinished.xml
@@ -9,14 +9,9 @@
         android:padding="10dp">
         <ImageView
             android:id="@+id/ImageViewUser"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/ic_menu_camera"
-            android:layout_marginRight="10dp"/>
-        <View
-            android:layout_width="0.3dp"
-            android:layout_height="fill_parent"
-            android:background="#c2c0c0"
             android:layout_marginRight="10dp"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,8 +20,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="5dp">
+                android:orientation="horizontal">
                 <TextView
                     android:id="@+id/TextViewUser"
                     android:layout_width="wrap_content"
@@ -64,9 +58,16 @@
                 android:id="@+id/TextViewWork"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="13dp"
                 android:text="Rapihin dan lengkapin data Working Periods buat semua karyawan di Altrovis Master"
-                android:textSize="15dp"
                 android:layout_marginBottom="2dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="#c2c0c0"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -95,21 +96,42 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Project :"
+                        android:text="Deadline :"
                         android:textSize="13dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="5dp"
                         android:textColor="#444444"/>
                     <TextView
-                        android:id="@+id/TextViewProject"
+                        android:id="@+id/TextViewDeadline"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Prewit"
+                        android:text="06 Sept 2016"
                         android:textStyle="bold"
                         android:textSize="13dp"
                         android:layout_gravity="center_vertical"/>
                 </LinearLayout>
             </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Project :"
+                    android:textSize="13dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="5dp"
+                    android:textColor="#444444"/>
+                <TextView
+                    android:id="@+id/TextViewProject"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Prewit"
+                    android:textStyle="bold"
+                    android:textSize="13dp"
+                    android:layout_gravity="center_vertical"/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
