--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,66 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/bg"
+    android:background="#111"
     tools:context="com.altrovis.newprewit.ActivityLogin">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="4">
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/logo"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="4">
-        <LinearLayout
+        android:orientation="vertical">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="30dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:background="@drawable/custom_rectangle_transparent">
-            <EditText
-                android:id="@+id/EditTextUsername"
+            android:layout_marginBottom="20dp">
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginBottom="-1dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textColorHint="#FFFFFF"
-                android:singleLine="true"
-                android:textColor="#FFFFFF"
-                android:background="@drawable/custom_input_form_top"
-                android:hint="Username"/>
-            <EditText
-                android:id="@+id/EditTextPassword"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textColorHint="#FFFFFF"
-                android:textColor="#FFFFFF"
-                android:inputType="textPassword"
-                android:background="@drawable/custom_input_form_bottom"
-                android:hint="Password"/>
+                android:layout_height="200dp"
+                android:src="@drawable/background_login"
+                android:scaleType="fitXY"/>
 
-            <Button
-                android:id="@+id/ButtonMasuk"
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="120dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/prewit"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="4">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/custom_button_login"
-                android:text="Masuk"
-                android:textColor="#FFFFFF"/>
-        </LinearLayout>
-    </RelativeLayout>
-</LinearLayout>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Sign in to your account"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center_horizontal"
+                    android:layout_marginBottom="20dp"/>
+
+                <EditText
+                    android:id="@+id/EditTextUsername"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/custom_input_form"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:hint="Username"
+                    android:textColorHint="#FFFFFF"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center"
+                    android:layout_marginBottom="10dp"
+                    android:singleLine="true"/>
+
+                <EditText
+                    android:id="@+id/EditTextPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/custom_input_form"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:hint="Password"
+                    android:textColorHint="#FFFFFF"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center"
+                    android:layout_marginBottom="10dp"
+                    android:inputType="textPassword"/>
+
+                <Button
+                    android:id="@+id/ButtonMasuk"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="@drawable/custom_button"
+                    android:text="Login"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginBottom="25dp"/>
+
+            </LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+</RelativeLayout>
