--- a/app/src/main/res/layout/item_listview_finished.xml
+++ b/app/src/main/res/layout/item_listview_finished.xml
@@ -57,19 +57,30 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/estimated"
+                    android:layout_marginRight="5dp"/>
                 <TextView
                     android:id="@+id/TextViewEstimated"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Est : 12 April 2016"
+                    android:text="12 April 2016"
                     android:textSize="13dp"
                     android:layout_marginRight="10dp"/>
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/finished"
+                    android:layout_marginRight="5dp"/>
                 <TextView
                     android:id="@+id/TextViewCompleted"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Completed : 12 April 2016"
+                    android:text="12 April 2016"
                     android:textSize="13dp"/>
             </LinearLayout>
             <RelativeLayout
